# src/modules/accounts/dtos/ICreateUserDTO.ts
@@ -1,0 +1,9 @@
+interface ICreateUserDTO {
+  name: string;
+  password: string;
+  username: string;
+  email: string;
+  driver_license: string;
+}
+
+export { ICreateUserDTO };
