# src/routes/index.ts
@@ -1,11 +1,13 @@
 import { Router } from 'express';
 
 import { categoriesRoutes } from './category.routes';
-import { specificationRoutes } from './spacifications.routes';
+import { specificationsRoutes } from './spacification.routes';
+import { usersRoutes } from './users.routes';
 
 const router = Router();
 
-router.use('/specifications', specificationRoutes);
+router.use('/specifications', specificationsRoutes);
 router.use('/categories', categoriesRoutes);
+router.use('/users', usersRoutes);
 
 export { router };
